--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mocha": "^2.2.4",
     "pre-push": "^0.1.1",
     "webpack": "^1.13.1"
+    "numjs": "^0.12.4"
   },
   "repository": {
     "type": "git",
